--- a/Calculadora-Pollos.html
+++ b/Calculadora-Pollos.html
@@ -39,7 +39,7 @@
         <br>
         <br>
         <br>
-        <h2 aria-setsize="100vh">Pollito Amarillo</h2>
+        <h2 aria-setsize="100vh">Acriolliadito 593</h2>
         <label for="pollos">Número de pollos:</label>
         <input type="number" id="pollos" value="50">
         <button onclick="calcularAlimento()">Calcular</button>
@@ -51,7 +51,7 @@
         <p style="color:rgba(160, 163, 11, 0.804) ;"> 
             Presiona la imagen
         </p>
-        <a target="_blank" href="Info.html"><img src="Pollos 2.jpeg" 
+        <a target="_blank" href="index.html"><img src="Pollos 2.jpeg" 
             alt="¡LLAMA AL MEJOR POLLO EL ECU!" width="100" height="100" /></a>
     </div>
     </div>
