--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
         <!-- Sobre Nosotros -->
         <section class="section">
             <h2>¿Quiénes Somos?</h2>
-            <p>En Pollito Amarillito nos especializamos en la distribución de pollos frescos y de alta calidad. Nuestro compromiso es llevar a tu negocio o hogar los mejores productos, garantizando frescura y un excelente servicio de entrega.</p>
+            <p>En Acriolliadito 593 nos especializamos en la distribución de pollos frescos y de alta calidad. Nuestro compromiso es llevar a tu negocio o hogar los mejores productos, garantizando frescura y un excelente servicio de entrega.</p>
             <img src="pollo.jpeg" alt="Pollo fresco" class="image" />
         </section>
         <section class="section">
             <h2>¿Cuál es el secreto de nuestro pollo fresco?</h2>
             <button onclick="mostrarRespuesta()">Ver Respuesta</button>
             <div class="respuesta" id="respuesta">
-                El secreto de nuestro pollo es la alimentación extricta y un buen cuidado con limpiezas de jaulas
-                una vez al mes, puedes ver como es nuestra alimentacion durante 45 dias en la siguente pagina: 
-                <a target="_blank" href="Pollito_Amarillito.html">Calcula la alimentación</a>🐔✨
+                El secreto de nuestro pollo es la alimentación extricta y un buen cuidado con limpiezas 
+                constantemente, puedes ver como es nuestra alimentacion durante 45 dias en la siguente pagina: 
+                <a target="_blank" href="Calculadora-Pollos.html">Calcula la alimentación</a>🐔✨
             </div>
         </section>
         <section class="section">
