--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             <button onclick="mostrarRespuesta()">Ver Respuesta</button>
             <div class="respuesta" id="respuesta">
                 El secreto de nuestro pollo es la alimentación extricta y un buen cuidado con limpiezas 
-                constantemente, puedes ver como es nuestra alimentacion durante 45 dias en la siguente pagina: 
-                <a target="_blank" href="Calculadora-Pollos.html">Calcula la alimentación</a>🐔✨
+                constantemente, puedes ver la tabla de comida en la siguiente pagina: 
+                <a target="_blank" href="Tabla-de-comida.html">Has click aqui</a>🐔✨
             </div>
         </section>
         <section class="section">
