--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <p class="contact">📍 Pais: Ecuador</p>
             <p class="contact">📍 Ciudad: Pasaje</p>
             <p class="contact">📞 Teléfono: +593 99 414 6413, +593 99 414 6640</p>
-            <a href="mailto:hulkpasaje@gmail.com">ortega.ja.2023@gmail.com</a>
+            <a href="mailto:hulkpasaje@gmail.com">Acriolliaito_593@gmail.com</a>
         </section>
 
     </main>
