--- a/Tabla-de-comida.html
+++ b/Tabla-de-comida.html
@@ -59,5 +59,15 @@
             <tr><th colspan="3">Total</th><th>12.18 lb</th></tr>
         </table>
     </div>
+    <div>
+        <p>Esta es la tabla de libras que come un pollo en 45 dias, eso si dependiendo de su etapa de crecimiento.</p>
+    </div>
+    <div>
+        <h2>Acriolliadito 593</h2>
+    <video width="600" controls>
+        <source src="video.mp4" type="video/mp4">
+        Tu navegador no soporta el elemento de video.
+    </video>
+    </div>
 </body>
 </html>
