--- a/Tabla-de-comida.html
+++ b/Tabla-de-comida.html
@@ -65,7 +65,7 @@
     <div>
         <h2>Acriolliadito 593</h2>
     <video width="600" controls>
-        <source src="video.mp4" type="video/mp4">
+        <source src="Acriolliadito.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
     </video>
     </div>
