--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
             <h2>¿Quiénes Somos?</h2>
             <p>En Acriolliadito 593 nos especializamos en la distribución de pollos frescos y de alta calidad. Nuestro compromiso es llevar a tu negocio o hogar los mejores productos, garantizando frescura y un excelente servicio de entrega.</p>
             <img src="pollo.jpeg" alt="Pollo fresco" class="image" />
+            <video width="400" controls>
+                <source src="Acriolliadito.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
         </section>
         <section class="section">
             <h2>¿Cuál es el secreto de nuestro pollo fresco?</h2>
