--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acriolliadito 593</title>
+    <title>Acriollado 593</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,7 +60,7 @@
 <body>
 
     <header>
-        Amarillito 593 - El mejor de Pasaje
+        Acriollado 593 - El mejor de Pasaje
     </header>
 
     <main class="container">
@@ -99,7 +99,7 @@
         <!-- Sobre Nosotros -->
         <section class="section">
             <h2>¿Quiénes Somos?</h2>
-            <p>En Acriolliadito 593 nos especializamos en la distribución de pollos frescos y de alta calidad. Nuestro compromiso es llevar a tu negocio o hogar los mejores productos, garantizando frescura y un excelente servicio de entrega.</p>
+            <p>En Acriollado 593 nos especializamos en la distribución de pollos frescos y de alta calidad. Nuestro compromiso es llevar a tu negocio o hogar los mejores productos, garantizando frescura y un excelente servicio de entrega.</p>
             <img src="pollo.jpeg" alt="Pollo fresco" class="image" />
             <br>
         </section>
